--- a/CPSC_411_HW2/app/src/main/AndroidManifest.xml
+++ b/CPSC_411_HW2/app/src/main/AndroidManifest.xml
@@ -9,7 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+
+        <activity android:name=".StudentDetailActivity"
+            android:parentActivityName=".StudentDetailActivity"/>
+        <activity android:name=".AddStudentActivity"
+            android:parentActivityName=".StudentDetailActivity" />
+
+        <activity android:name=".MainActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
