--- a/CPSC_411_HW2/app/src/main/AndroidManifest.xml
+++ b/CPSC_411_HW2/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
         android:theme="@style/AppTheme">
 
         <activity android:name=".StudentDetailActivity"
-            android:parentActivityName=".StudentDetailActivity"/>
+            android:parentActivityName=".MainActivity"/>
         <activity android:name=".AddStudentActivity"
-            android:parentActivityName=".StudentDetailActivity" />
+            android:parentActivityName=".MainActivity" />
 
         <activity android:name=".MainActivity"
             android:launchMode="singleTop">
